# Feature_RLGym

./: .gitignore  .pylintrc  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
docs/source/: conf.py  features_rlgym.api.rst  features_rlgym.rocket_league.features.rst  features_rlgym.rocket_league.rst  index.rst
docs/source/guide/: install.rst
features-rlgym/: pyproject.toml
features-rlgym-api/: pyproject.toml
features-rlgym-api/src/features_rlgym/api/: __init__.py  configurable_obs_builder.py  feature.py
features-rlgym-rocket-league/: CHANGELOG.md  pyproject.toml
features-rlgym-rocket-league/src/features_rlgym/rocket_league/: config.py
features-rlgym-rocket-league/src/features_rlgym/rocket_league/features/: feature_ball.py  feature_ball_pred.py  feature_boost_pads.py  feature_others.py  feature_self.py
features-rlgym/src/features_rlgym/: __init__.py
src/feature_rlgym/: __init__.py
src/feature_rlgym/api/: configurable_obs_builder.py  configurable_shared_info_provider.py  feature.py  feature_config.py
src/feature_rlgym/rocket_league/: config.py  empty_builder.py
src/feature_rlgym/rocket_league/features/: __init__.py  feature_ball.py  feature_ball_pred.py  feature_boost_pads.py  feature_others.py  feature_self.py
src/features-rlgym-api/: README.md  pyproject.toml
src/features-rlgym-api/src/features_rlgym/api/: feature_config.py
src/features-rlgym-rocket-league/: README.md
src/features_rlgym/api/: __init__.py  configurable_shared_info_provider.py  feature_config.py
src/features_rlgym/rocket_league/: __init__.py  config.py
src/features_rlgym/rocket_league/features/: __init__.py  feature_ball_pred.py  feature_others.py
tests/: main.py
(+2 files in other folders)
